Update all notebooks

--- a/Benchmark_Cantonese.ipynb
+++ b/Benchmark_Cantonese.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,78 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>intent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>何謂等候期？</td>\n",
-       "      <td>591b04694e9337459e1c9f96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>保費是否保證維持不變？</td>\n",
-       "      <td>591be84894cab79e6d265552</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>假若我身處海外，如何延長保障期？可否通過電話辦理手續？</td>\n",
-       "      <td>591bd01894cab79e6d26552a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>同一賬戶內，如果有多個用戶擁有一個以上嘅電話號碼，「易登入」對我哋有咩幫助?</td>\n",
-       "      <td>5910b2f3722b5c5f63cfdc56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>如何聯絡AIG旅遊的緊急服務團隊？</td>\n",
-       "      <td>596f041146fa08f7d2e84022</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 question                    intent\n",
-       "0                                  何謂等候期？  591b04694e9337459e1c9f96\n",
-       "1                             保費是否保證維持不變？  591be84894cab79e6d265552\n",
-       "2             假若我身處海外，如何延長保障期？可否通過電話辦理手續？  591bd01894cab79e6d26552a\n",
-       "3  同一賬戶內，如果有多個用戶擁有一個以上嘅電話號碼，「易登入」對我哋有咩幫助?  5910b2f3722b5c5f63cfdc56\n",
-       "4                       如何聯絡AIG旅遊的緊急服務團隊？  596f041146fa08f7d2e84022"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df = pd.concat([train_df, pd.DataFrame({'intent': y_train, 'question': X_train})], sort=False)\n",
     "train_df.head()"
@@ -147,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,78 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>intent</th>\n",
-       "      <th>question</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>596f056046fa08f7d2e8405e</td>\n",
-       "      <td>保單可以保障哪些醫療開支？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>591bcfcd94cab79e6d265527</td>\n",
-       "      <td>取消旅程要唔要俾自負額？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>596f041146fa08f7d2e84022</td>\n",
-       "      <td>有沒有緊急服務熱線？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>如果我一次過去幾個國家，旅遊保險可以保障嗎？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>596f041146fa08f7d2e84025</td>\n",
-       "      <td>更改行程可唔可以索償？</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       intent                question\n",
-       "19   596f056046fa08f7d2e8405e           保單可以保障哪些醫療開支？\n",
-       "42   591bcfcd94cab79e6d265527            取消旅程要唔要俾自負額？\n",
-       "153  596f041146fa08f7d2e84022              有沒有緊急服務熱線？\n",
-       "78   59717c017cf3bfd43b62ec57  如果我一次過去幾個國家，旅遊保險可以保障嗎？\n",
-       "145  596f041146fa08f7d2e84025             更改行程可唔可以索償？"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_df = pd.DataFrame({'intent': y_test, 'question': X_test})\n",
     "test_df.head()"
@@ -238,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,48 +132,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>596f056046fa08f7d2e8405e</td>\n",
-       "      <td>保單可以保障哪些醫療開支？</td>\n",
-       "      <td>旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？</td>\n",
+       "      <td>59717c017cf3bfd43b62ec57</td>\n",
+       "      <td>AIG 有冇緊急服務嘅電話號碼？</td>\n",
+       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>596f056046fa08f7d2e8405e</td>\n",
-       "      <td>呢份保單包唔包醫療費用？</td>\n",
-       "      <td>旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？</td>\n",
+       "      <td>59717c017cf3bfd43b62ec57</td>\n",
+       "      <td>一份旅遊保險只會包一個國家內的旅行嗎？</td>\n",
+       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>591bcfcd94cab79e6d265527</td>\n",
-       "      <td>取消旅程要唔要俾自負額？</td>\n",
-       "      <td>非香港身分證持有人可否投保旅遊保？</td>\n",
+       "      <td>59717c017cf3bfd43b62ec57</td>\n",
+       "      <td>呢份旅遊保險系唔系只會包一個目的地嘅旅行？</td>\n",
+       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>591bcfcd94cab79e6d265527</td>\n",
-       "      <td>冇身份證買唔買得旅遊保險？</td>\n",
-       "      <td>非香港身分證持有人可否投保旅遊保？</td>\n",
+       "      <td>59717c017cf3bfd43b62ec57</td>\n",
+       "      <td>如果我一次過去幾個國家，呢份旅遊保險會唔會包埋？</td>\n",
+       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>596f041146fa08f7d2e84022</td>\n",
-       "      <td>有沒有緊急服務熱線？</td>\n",
-       "      <td>如何聯絡AIG旅遊的緊急服務團隊？</td>\n",
+       "      <td>59717c017cf3bfd43b62ec57</td>\n",
+       "      <td>如果我一次過去幾個國家，旅遊保險可以保障嗎？</td>\n",
+       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     intent           test                            truth\n",
-       "0  596f056046fa08f7d2e8405e  保單可以保障哪些醫療開支？  旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？\n",
-       "1  596f056046fa08f7d2e8405e   呢份保單包唔包醫療費用？  旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？\n",
-       "2  591bcfcd94cab79e6d265527   取消旅程要唔要俾自負額？                非香港身分證持有人可否投保旅遊保？\n",
-       "3  591bcfcd94cab79e6d265527  冇身份證買唔買得旅遊保險？                非香港身分證持有人可否投保旅遊保？\n",
-       "4  596f041146fa08f7d2e84022     有沒有緊急服務熱線？                如何聯絡AIG旅遊的緊急服務團隊？"
+       "                     intent                      test  \\\n",
+       "0  59717c017cf3bfd43b62ec57          AIG 有冇緊急服務嘅電話號碼？   \n",
+       "1  59717c017cf3bfd43b62ec57       一份旅遊保險只會包一個國家內的旅行嗎？   \n",
+       "2  59717c017cf3bfd43b62ec57     呢份旅遊保險系唔系只會包一個目的地嘅旅行？   \n",
+       "3  59717c017cf3bfd43b62ec57  如果我一次過去幾個國家，呢份旅遊保險會唔會包埋？   \n",
+       "4  59717c017cf3bfd43b62ec57    如果我一次過去幾個國家，旅遊保險可以保障嗎？   \n",
+       "\n",
+       "                         truth  \n",
+       "0  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
+       "1  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
+       "2  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
+       "3  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
+       "4  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,21 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 86\n",
-      "# Correct: 42\n",
-      "# Wrong: 44\n",
-      "% correct: 48.8372093023\n",
-      "Precision: 0.50525210084\n",
-      "Recall: 0.48431372549\n",
-      "F-1: 0.469887955182\n",
-      "Processing time: 67.5716221333 seconds\n"
+      "# Tested: 181\n",
+      "# Correct: 62\n",
+      "# Wrong: 119\n",
+      "% correct: 34.2541436464\n",
+      "# false positives: 0\n",
+      "Processing time: 122.677299976 seconds\n"
      ]
     }
    ],
@@ -414,32 +281,32 @@
     "start = time.time()\n",
     "\n",
     "correct, pred = [], []\n",
+    "false_pos = 0\n",
     "for i, question in enumerate(test_df['test']):\n",
     "    \n",
-    "    payload = {\n",
-    "        'Query': question,\n",
-    "        'SessionId': str(i),\n",
-    "        'Language': 'zh-hk'\n",
-    "    }\n",
+    "    payload = {'dbName': 'hkDemo56',\n",
+    "               'logging': 1,\n",
+    "               'classify_intent': 3,\n",
+    "               'autoCorrection': 0,\n",
+    "               'memoryRecentConversations': 0,\n",
+    "               'query': question}\n",
     "    \n",
-    "    r = requests.get('https://hk-demo56.clare.ai/api/v1/MessageBot', params=payload, headers=headers)\n",
+    "    r = requests.get('http://35.160.77.29:58074/word2vec/most_similar_sentence_zh', params=payload)\n",
     "    \n",
-    "    if json.loads(r.text)[0]['predictionResult']['question'] == test_df['intent'][i]:\n",
+    "    if json.loads(r.text)['results'][0]['Question'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
+    "        if json.loads(r.text)['results'][0]['Score'] > 0.8:\n",
+    "            false_pos += 1\n",
     "        correct.append(0)\n",
-    "    \n",
-    "    pred.append(json.loads(r.text)[0]['predictionResult']['question'])\n",
-    "        \n",
+    "\n",
     "end = time.time()\n",
     "\n",
     "print('# Tested: {}'.format(len(correct)))\n",
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
-    "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('# false positives: {}'.format(false_pos))\n",
     "print('Processing time: {} seconds'.format(end - start))"
    ]
   },
@@ -452,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +342,7 @@
     "        \n",
     "    data = {'languageCode': 'zh-HK',\n",
     "            'name': intent,\n",
-    "            'userSays': [{'data': [{'text': question} for question in variations[intent]]}],\n",
+    "            'userSays': [{'data': [{'text': question}]} for question in variations[intent]],\n",
     "            'auto': True}\n",
     "\n",
     "    r = requests.post(url, data=json.dumps(data), headers=headers)\n",
@@ -488,21 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 86\n",
-      "# Correct: 15\n",
-      "# Wrong: 71\n",
-      "% correct: 17.4418604651\n",
-      "Precision: 0.342857142857\n",
-      "Recall: 0.166666666667\n",
-      "F-1: 0.218095238095\n",
-      "Processing time: 17.8180029392 seconds\n"
+      "# Tested: 181\n",
+      "# Correct: 67\n",
+      "# Wrong: 114\n",
+      "% correct: 37.0165745856\n",
+      "# false positives: 0\n",
+      "Processing time: 33.1693508625 seconds\n"
      ]
     }
    ],
@@ -512,6 +377,7 @@
     "start = time.time()\n",
     "\n",
     "correct, pred = [], []\n",
+    "false_pos = 0\n",
     "for i, question in enumerate(test_df['test']):\n",
     "    \n",
     "    url = 'https://api.dialogflow.com/v1/query?v=20180910'\n",
@@ -522,13 +388,16 @@
     "    \n",
     "    r = requests.post(url, data=json.dumps(data), headers=headers)\n",
     "    r = json.loads(r.text)\n",
-    "            \n",
-    "    if r['result']['score'] > 0.0 and r['result']['metadata']['intentName'] == test_df['intent'][i]:\n",
-    "        correct.append(1)\n",
-    "        pred.append(r['result']['metadata']['intentName'])\n",
+    "    \n",
+    "    if r['result']['metadata']:\n",
+    "        if r['result']['metadata']['intentName'] == test_df['intent'][i]:\n",
+    "            correct.append(1)\n",
+    "        else:\n",
+    "            if r['result']['score'] > 0.8:\n",
+    "                false_pos += 1\n",
+    "            correct.append(0)\n",
     "    else:\n",
     "        correct.append(0)\n",
-    "        pred.append('')\n",
     "        \n",
     "end = time.time()\n",
     "        \n",
@@ -536,9 +405,7 @@
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
-    "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('# false positives: {}'.format(false_pos))\n",
     "print('Processing time: {} seconds'.format(end - start))"
    ]
   },
@@ -551,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,21 +455,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 86\n",
-      "# Correct: 49\n",
-      "# Wrong: 37\n",
-      "% correct: 56.976744186\n",
-      "Precision: 0.742857142857\n",
-      "Recall: 0.501904761905\n",
-      "F-1: 0.585328798186\n",
-      "Processing time: 27.8240060806 seconds\n"
+      "# Tested: 181\n",
+      "# Correct: 61\n",
+      "# Wrong: 120\n",
+      "% correct: 33.7016574586\n",
+      "# false positives: 3\n",
+      "Processing time: 50.6586639881 seconds\n"
      ]
     }
    ],
@@ -612,6 +477,7 @@
     "start = time.time()\n",
     "\n",
     "correct, pred = [], []\n",
+    "false_pos = 0\n",
     "for i, question in enumerate(test_df['test']):\n",
     "    r = assistant.message(\n",
     "        workspace_id='d1e1e46c-5fb3-45a8-8578-d157aa908f1b',\n",
@@ -620,22 +486,22 @@
     "        }\n",
     "    ).get_result()\n",
     "    \n",
-    "    if r['intents'][0]['intent'] == test_df['intent'][i]:\n",
+    "    if r['intents'] and r['intents'][0]['intent'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
-    "        pred.append(r['intents'][0]['intent'])\n",
     "    else:\n",
-    "        correct.append(0)\n",
-    "        pred.append('')\n",
+    "        if r['intents'] and r['intents'][0]['confidence'] > 0.8:\n",
+    "            correct.append(0)\n",
+    "            false_pos += 1\n",
+    "        else:\n",
+    "            correct.append(0)\n",
     "        \n",
     "end = time.time()\n",
-    "        \n",
+    "\n",
     "print('# Tested: {}'.format(len(correct)))\n",
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
-    "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('# false positives: {}'.format(false_pos))\n",
     "print('Processing time: {} seconds'.format(end - start))"
    ]
   },
